featured section align fixed

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@
 
 .featured-box{
     display: flex;
+    justify-content: space-around;
     gap: 25px;
 }
 .box{
@@ -116,6 +117,7 @@
 
 .featured-link-box{
     display: flex;
+    justify-content: space-around;
 }
 
 .link-box{
